--- a/src/main/resources/public/template/cmdb/attribute/attributeList.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeList.html
@@ -5,31 +5,33 @@
     <meta charset="UTF-8">
 </head>
 <body>
+<input type="hidden" id="totalCount" th:value="${attributeListCount}"/>
 <table class="list-table">
     <thead class="list-head">
-    <tr class="flex-row align-items-center">
-        <th style="width: 25%" class="align-left" th:text="#{cmdb.attribute.label.name}"></th>
-        <th style="width: 25%" class="align-left" th:text="#{cmdb.attribute.label.label}"></th>
-        <th style="width: 20%" class="align-center" th:text="#{cmdb.attribute.label.type}"></th>
-        <th style="width: 30%" class="align-left" th:text="#{cmdb.attribute.label.description}"></th>
-    </tr>
+        <tr class="flex-row align-items-center">
+            <th style="width: 25%" class="align-left" th:text="#{cmdb.attribute.label.name}"></th>
+            <th style="width: 25%" class="align-left" th:text="#{cmdb.attribute.label.label}"></th>
+            <th style="width: 20%" class="align-center" th:text="#{cmdb.attribute.label.type}"></th>
+            <th style="width: 30%" class="align-left" th:text="#{cmdb.attribute.label.description}"></th>
+        </tr>
     </thead>
     <tbody class="list-body">
-    <input type="hidden" id="totalCount" th:value="${attributeListCount}"/>
-    <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(attributeList)}">
-        <td style="width:100%" colspan="4" class="align-center" th:text="#{common.msg.noData}"></td>
-    </tr>
-    <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(attributeList)}" th:each="attribute: ${attributeList}">
-        <td style="width: 25%" class="align-left underline">
-            <a sec:authorize="hasAuthority('cmdb.attribute.create') || hasAuthority('cmdb.attribute.update')" th:text="${attribute.attributeName}"
-               th:href="@{/cmdb/attributes/{id}/edit(id=${attribute.attributeId})}"></a>
-            <a sec:authorize="!hasAuthority('cmdb.attribute.create') && !hasAuthority('cmdb.attribute.update')" th:text="${attribute.attributeName}"
-               th:href="@{/cmdb/attributes/{id}/view(id=${attribute.attributeId})}"></a>
-        </td>
-        <td style="width: 25%" class="align-left" th:text="${attribute.attributeText}"></td>
-        <td style="width: 20%" class="align-center" th:text="${attribute.attributeType}"></td>
-        <td style="width: 30%" class="align-left" th:text="${attribute.attributeDesc}"></td>
-    </tr>
+        <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(attributeList)}">
+            <td style="width:100%" colspan="4" class="align-center" th:text="#{common.msg.noData}"></td>
+        </tr>
+        <th:block th:fragment="list">
+            <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(attributeList)}" th:each="attribute: ${attributeList}">
+                <td style="width: 25%" class="align-left underline">
+                    <a sec:authorize="hasAuthority('cmdb.attribute.create') || hasAuthority('cmdb.attribute.update')" th:text="${attribute.attributeName}"
+                       th:href="@{/cmdb/attributes/{id}/edit(id=${attribute.attributeId})}"></a>
+                    <a sec:authorize="!hasAuthority('cmdb.attribute.create') && !hasAuthority('cmdb.attribute.update')" th:text="${attribute.attributeName}"
+                       th:href="@{/cmdb/attributes/{id}/view(id=${attribute.attributeId})}"></a>
+                </td>
+                <td style="width: 25%" class="align-left" th:text="${attribute.attributeText}"></td>
+                <td style="width: 20%" class="align-center" th:text="${attribute.attributeType}"></td>
+                <td style="width: 30%" class="align-left" th:text="${attribute.attributeDesc}"></td>
+            </tr>
+        </th:block>
     </tbody>
 </table>
 </body>
