--- a/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeSearch.html
@@ -53,13 +53,11 @@
                 if (offsetCount === 0) {
                     offsetCount = aliceJs.searchDataCount;
                 }
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/rest/cmdb/attributes?' + urlParam, isScroll);
             } else {
                 offsetCount = 0;
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/cmdb/attributes?' + urlParam, isScroll);
             }
+            urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount  + '&isScroll=' + isScroll;
+            restSubmit('get', '/cmdb/attributes?' + urlParam, isScroll);
         }
 
         // REST API
@@ -71,82 +69,38 @@
                 showProgressbar: false,
                 callbackFunc: function (response) {
                     if (isScroll) {
-                        let dataList = JSON.parse(response.responseText);
-                        if (dataList.length > 0) {
-                            aliceJs.showTotalCount(dataList[0].totalCount);
-                            document.getElementById('totalCount').value = dataList[0].totalCount;
-                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                offsetCount = offsetCount + aliceJs.searchDataCount;
-                                dataList.forEach(function(data) {
-                                    getDataTemplate(data);
-                                });
-                            }
+                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                            offsetCount = offsetCount + aliceJs.searchDataCount;
+                        }
+                        const attributeTbody = document.querySelector('.list-body .os-content');
+                        const tempTb = document.createElement('table');
+                        tempTb.innerHTML = response.responseText;
+                        for (let i = 0; i < tempTb.rows.length; i++) {
+                            attributeTbody.appendChild(tempTb.rows[i]);
                         }
                     } else {
                         document.getElementById('attributeList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                    }
-
-                    OverlayScrollbars(document.querySelector('.list-body'), {
-                        className: 'scrollbar',
-                        callbacks: {
-                            onScroll: function(e) {
-                                const scrollHeight = e.target.scrollHeight;
-                                const scrollTop = e.target.scrollTop;
-                                const clientHeight = e.target.clientHeight;
-                                if (scrollHeight - scrollTop === clientHeight) {
-                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                        searchAttributes(true);
+                        OverlayScrollbars(document.querySelector('.list-body'), {
+                            className: 'scrollbar',
+                            callbacks: {
+                                onScroll: function(e) {
+                                    const scrollHeight = e.target.scrollHeight;
+                                    const scrollTop = e.target.scrollTop;
+                                    const clientHeight = e.target.clientHeight;
+                                    if (scrollHeight - scrollTop === clientHeight) {
+                                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                            searchAttributes(true);
+                                        }
                                     }
                                 }
                             }
-                        }
-                    });
+                        });
+                    }
                 }
             };
             aliceJs.sendXhr(opt);
         }
-
-        // Tr 동적 데이터 만들기
-        function getDataTemplate(data) {
-            let div = document.querySelector('.list-body .os-content');
-            let tr = document.createElement('tr');
-            tr.className = 'flex-row align-items-center';
-
-            let tdAttrName = document.createElement('td');
-            tdAttrName.style.width = '25%';
-            tdAttrName.className = 'align-left underline';
-            let aAttrName = document.createElement('a');
-            if (document.getElementsByName('isRole')[0].value === 'true') {
-                aAttrName.href = '/cmdb/attributes/' + data.attributeId + '/edit';
-            } else {
-                aAttrName.href = '/cmdb/attributes/' + data.attributeId + '/view';
-            }
-            aAttrName.innerText = data.attributeName;
-            tdAttrName.appendChild(aAttrName);
-
-            let tdAttrLabel = document.createElement('td');
-            tdAttrLabel.style.width = '25%';
-            tdAttrLabel.className = 'align-left';
-            tdAttrLabel.innerText = data.attributeText;
-
-            let tdAttrType = document.createElement('td');
-            tdAttrType.style.width = '20%';
-            tdAttrType.className = 'align-center';
-            tdAttrType.innerText = data.attributeType;
-
-            let tdAttrDesc = document.createElement('td');
-            tdAttrDesc.style.width = '30%';
-            tdAttrDesc.className = 'align-left';
-            tdAttrDesc.innerText = data.attributeDesc;
-
-            tr.appendChild(tdAttrName);
-            tr.appendChild(tdAttrLabel);
-            tr.appendChild(tdAttrType);
-            tr.appendChild(tdAttrDesc);
-            div.appendChild(tr);
-        }
-
         /*]]>*/
     </script>
 </th:block>
