--- a/src/main/resources/public/template/cmdb/ci/ciList.html
+++ b/src/main/resources/public/template/cmdb/ci/ciList.html
@@ -4,35 +4,37 @@
     <meta charset="UTF-8">
 </head>
 <body>
+<input type="hidden" id="totalCount" th:value="${ciListCount}"/>
 <table class="list-table">
     <thead class="list-head">
-    <tr class="flex-row align-items-center">
-        <th style="width: 4%;"></th>
-        <th style="width: 21%;" class="align-left" th:text="#{cmdb.ci.label.ciNo}"></th>
-        <th style="width: 10%;" class="align-left" th:text="#{cmdb.ci.label.type}"></th>
-        <th style="width: 15%;" class="align-left" th:text="#{cmdb.ci.label.name}"></th>
-        <th style="width: 25%;" class="align-left" th:text="#{cmdb.ci.label.description}"></th>
-        <th style="width: 25%;" class="align-left" th:text="#{cmdb.ci.label.tag}"></th>
-    </tr>
+        <tr class="flex-row align-items-center">
+            <th style="width: 4%;"></th>
+            <th style="width: 21%;" class="align-left" th:text="#{cmdb.ci.label.ciNo}"></th>
+            <th style="width: 10%;" class="align-left" th:text="#{cmdb.ci.label.type}"></th>
+            <th style="width: 15%;" class="align-left" th:text="#{cmdb.ci.label.name}"></th>
+            <th style="width: 25%;" class="align-left" th:text="#{cmdb.ci.label.description}"></th>
+            <th style="width: 25%;" class="align-left" th:text="#{cmdb.ci.label.tag}"></th>
+        </tr>
     </thead>
     <tbody class="list-body">
-    <input type="hidden" id="totalCount" th:value="${ciListCount}"/>
-    <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(ciList)}">
-        <td style="width: 100%;" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
-    </tr>
-    <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(ciList)}" th:each="ci: ${ciList}">
-        <td style="width: 4%;">
-            <img th:src="@{/assets/media/images/cmdb/{ciIcon}(ciIcon=${ci.ciIcon})}"/>
-        </td>
-        <td style="width: 21%;" class="align-left underline pointer" th:text="${ci.ciNo}"
-            th:onclick="openCIDetailModal([[${ci.ciId}]]);"></td>
-        <td style="width: 10%;" class="align-left" th:text="${ci.typeName}"></td>
-        <td style="width: 15%;" class="align-left" th:text="${ci.ciName}"></td>
-        <td style="width: 25%;" class="align-left" th:text="${ci.ciDesc}"></td>
-        <td style="width: 25%;" class="align-left">
-            <span class="tag align-left text-ellipsis" th:each="tag: ${ci.tags}" th:text="${tag.tagName}"></span>
-        </td>
-    </tr>
+        <tr class="flex-row align-items-center no-data-found-list" th:if="${#arrays.isEmpty(ciList)}">
+            <td style="width: 100%;" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
+        </tr>
+        <th:block th:fragment="list">
+            <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(ciList)}" th:each="ci: ${ciList}">
+                <td style="width: 4%;">
+                    <img th:src="@{/assets/media/images/cmdb/{ciIcon}(ciIcon=${ci.ciIcon})}"/>
+                </td>
+                <td style="width: 21%;" class="align-left underline pointer" th:text="${ci.ciNo}"
+                    th:onclick="openCIDetailModal([[${ci.ciId}]]);"></td>
+                <td style="width: 10%;" class="align-left" th:text="${ci.typeName}"></td>
+                <td style="width: 15%;" class="align-left" th:text="${ci.ciName}"></td>
+                <td style="width: 25%;" class="align-left" th:text="${ci.ciDesc}"></td>
+                <td style="width: 25%;" class="align-left">
+                    <span class="tag align-left text-ellipsis" th:each="tag: ${ci.tags}" th:text="${tag.tagName}"></span>
+                </td>
+            </tr>
+        </th:block>
     </tbody>
 </table>
 </body>
