--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -64,13 +64,11 @@
                 if (offsetCount === 0) {
                     offsetCount = aliceJs.searchDataCount;
                 }
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/rest/cmdb/cis?' + urlParam, isScroll);
             } else {
                 offsetCount = 0;
-                urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount;
-                restSubmit('get', '/cmdb/cis?' + urlParam, isScroll);
             }
+            urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&offset=' + offsetCount  + '&isScroll=' + isScroll;
+            restSubmit('get', '/cmdb/cis?' + urlParam, isScroll);
         }
 
         function restSubmit(method, url, isScroll) {
@@ -81,16 +79,14 @@
                 showProgressbar: false,
                 callbackFunc: function (response) {
                     if (isScroll) {
-                        let dataList = JSON.parse(response.responseText);
-                        if (dataList.length > 0) {
-                            aliceJs.showTotalCount(dataList[0].totalCount);
-                            document.getElementById('totalCount').value = dataList[0].totalCount;
-                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                offsetCount = offsetCount + aliceJs.searchDataCount;
-                                dataList.forEach(function (data) {
-                                    getDataTemplate(data);
-                                });
-                            }
+                        if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                            offsetCount = offsetCount + aliceJs.searchDataCount;
+                        }
+                        const ciTbody = document.querySelector('.list-body .os-content');
+                        const tempTb = document.createElement('table');
+                        tempTb.innerHTML = response.responseText;
+                        for (let i = 0; i < tempTb.rows.length; i++) {
+                            ciTbody.appendChild(tempTb.rows[i]);
                         }
                     } else {
                         if (url.indexOf("/view") > 0) {
@@ -130,86 +126,27 @@
                         } else {
                             document.getElementById('ciList').innerHTML = response.responseText;
                             aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                        }
-                    }
-
-                    OverlayScrollbars(document.querySelector('.list-body'), {
-                        className: 'scrollbar',
-                        callbacks: {
-                            onScroll: function (e) {
-                                const scrollHeight = e.target.scrollHeight;
-                                const scrollTop = e.target.scrollTop;
-                                const clientHeight = e.target.clientHeight;
-                                if (scrollHeight - scrollTop === clientHeight) {
-                                    if (aliceJs.isEnableScrollEvent(offsetCount)) {
-                                        searchCis(true);
+                            OverlayScrollbars(document.querySelector('.list-body'), {
+                                className: 'scrollbar',
+                                callbacks: {
+                                    onScroll: function (e) {
+                                        const scrollHeight = e.target.scrollHeight;
+                                        const scrollTop = e.target.scrollTop;
+                                        const clientHeight = e.target.clientHeight;
+                                        if (scrollHeight - scrollTop === clientHeight) {
+                                            if (aliceJs.isEnableScrollEvent(offsetCount)) {
+                                                searchCis(true);
+                                            }
+                                        }
                                     }
                                 }
-                            }
+                            });
                         }
-                    });
+                    }
                 }
             };
             aliceJs.sendXhr(opt);
         }
-
-        function getDataTemplate(data) {
-            let div = document.querySelector('.list-body .os-content');
-            let tr = document.createElement('tr');
-            tr.className = 'flex-row align-items-center';
-
-            let tdCiIcon = document.createElement('td');
-            tdCiIcon.style.width = '4%';
-            let imgCiIcon = document.createElement('img');
-            imgCiIcon.style.width = '24';
-            imgCiIcon.style.height = '24';
-            imgCiIcon.src = '/assets/media/images/cmdb/' + data.ciIcon;
-            tdCiIcon.appendChild(imgCiIcon);
-
-            let tdCiNo = document.createElement('td');
-            tdCiNo.style.width = '21%';
-            if (data.ciNo !== null) {
-                tdCiNo.className = 'align-left underline pointer';
-                tdCiNo.onclick = function () {
-                    openCIDetailModal(data.ciNo);
-                };
-                tdCiNo.innerText = data.ciNo;
-            }
-
-            let tdCiTypeName = document.createElement('td');
-            tdCiTypeName.style.width = '10%';
-            tdCiTypeName.className = 'align-left';
-            tdCiTypeName.innerText = data.typeName;
-
-            let tdCiName = document.createElement('td');
-            tdCiName.style.width = '15%';
-            tdCiName.className = 'align-left';
-            tdCiName.innerText = data.ciName;
-
-            let tdCiDesc = document.createElement('td');
-            tdCiDesc.style.width = '25%';
-            tdCiDesc.className = 'align-left';
-            tdCiDesc.innerText = data.ciDesc;
-
-            let tdCiTag = document.createElement('td');
-            tdCiTag.style.width = '25%';
-            tdCiTag.className = 'align-left';
-            for (let i = 0; i < data.tags.length; i++) {
-                let spanTag = document.createElement('span');
-                spanTag.className = 'tag align-center text-ellipsis';
-                spanTag.innerText = data.tags[i].tagName;
-                tdCiTag.appendChild(spanTag);
-            }
-
-            tr.appendChild(tdCiIcon);
-            tr.appendChild(tdCiNo);
-            tr.appendChild(tdCiTypeName);
-            tr.appendChild(tdCiName);
-            tr.appendChild(tdCiDesc);
-            tr.appendChild(tdCiTag);
-            div.appendChild(tr);
-        }
-
         /*]]>*/
     </script>
 </th:block>
