--- a/src/main/resources/public/template/portal/download/downloadList.html
+++ b/src/main/resources/public/template/portal/download/downloadList.html
@@ -2,34 +2,36 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head></head>
 <body>
+<input type="hidden" id="totalCount" name="totalCount" th:value="${downloadCount}"/>
 <table>
     <thead>
-    <tr>
-        <th style="width:5%;" th:text="#{download.label.seq}"></th>
-        <th style="width:10%;" th:text="#{download.label.category}"></th>
-        <th style="width:45%;" th:text="#{common.label.title}"></th>
-        <th style="width:10%;" th:text="#{common.label.writer}"></th>
-        <th style="width:20%;" th:text="#{common.label.writeDate}"></th>
-        <th style="width:10%;" th:text="#{download.label.views}"></th>
-    </tr>
+        <tr>
+            <th style="width:5%;" th:text="#{download.label.seq}"></th>
+            <th style="width:10%;" th:text="#{download.label.category}"></th>
+            <th style="width:45%;" th:text="#{common.label.title}"></th>
+            <th style="width:10%;" th:text="#{common.label.writer}"></th>
+            <th style="width:20%;" th:text="#{common.label.writeDate}"></th>
+            <th style="width:10%;" th:text="#{download.label.views}"></th>
+        </tr>
     </thead>
     <tbody class="list-body">
-    <input type="hidden" id="totalCount" name="totalCount" th:value="${downloadCount}"/>
-    <tr class="no-data-found-list" th:if="${#arrays.isEmpty(downloadList)}">
-        <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
-    </tr>
-    <tr th:each="download : ${downloadList}">
-        <td style="width:5%;" class="align-center" th:text="|${download.downloadSeq}|"></td>
-        <td style="width:10%;" class="align-center" th:text="#{${download.downloadCategory}}"></td>
-        <td style="width:45%;" class="align-left underline">
-            <a th:text="${download.downloadTitle}"
-               th:href="@{/portals/downloads/{id}/view(id=${download.downloadId})}">
-            </a>
-        </td>
-        <td style="width:10%;" class="align-center" th:text="${download.createUserName}"></td>
-        <td style="width:20%;" class="align-center" th:name="createDt" th:text="${download.createDt}"></td>
-        <td style="width:10%;" class="align-center" th:text="${download.views}"></td>
-    </tr>
+        <tr class="no-data-found-list" th:if="${#arrays.isEmpty(downloadList)}">
+            <td style="width:100%" colspan="6" class="align-center" th:text="#{common.msg.noData}"></td>
+        </tr>
+        <th:block th:fragment="list">
+            <tr th:each="download : ${downloadList}">
+                <td style="width:5%;" class="align-center" th:text="|${download.downloadSeq}|"></td>
+                <td style="width:10%;" class="align-center" th:text="#{${download.downloadCategory}}"></td>
+                <td style="width:45%;" class="align-left underline">
+                    <a th:text="${download.downloadTitle}"
+                       th:href="@{/portals/downloads/{id}/view(id=${download.downloadId})}">
+                    </a>
+                </td>
+                <td style="width:10%;" class="align-center" th:text="${download.createUserName}"></td>
+                <td style="width:20%;" class="align-center date-time" th:text="${download.createDt}"></td>
+                <td style="width:10%;" class="align-center" th:text="${download.views}"></td>
+            </tr>
+        </th:block>
     </tbody>
 </table>
 </body>
