#9197 목록 조회 기능은 하나만 쓰도록 변경 : 기능 적용

--- a/src/main/resources/public/template/user/userSearch.html
+++ b/src/main/resources/public/template/user/userSearch.html
@@ -78,7 +78,7 @@
                     } else {
                         document.getElementById('userList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
-                        setDateTimeFormat(document.getElementById('chartList'));
+                        setDateTimeFormat(document.getElementById('userList'));
                         OverlayScrollbars(document.querySelector('.list-body'), {
                             className: 'scrollbar',
                             callbacks: {
