#10087 동적 차트 데이터로 차트 그리기 Commit

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4724,6 +4724,10 @@ body.modal-active {
   display: inline-block;
   vertical-align: middle;
 }
+.modal-dialog.chart-view-modal {
+  width: 62.5rem;
+  height: 31.25rem;
+}
 .modal-dialog.cmdb-ci-view-modal {
   width: 62.5rem;
   height: 53.0625rem;
