--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -205,3 +205,6 @@ $cmdb-ci-attribute-bg-color:                 $light-gray;
 $scheduler-modal-width:                      62.5rem; // 1000px
 $scheduler-modal-height:                     37.5rem; // 600px
 
+///////////////////////// 통계 차트 미리보기 모달 /////////////////////////
+$chart-view-modal-width:                  62.5rem;  // 1000px
+$chart-view-modal-height:                 31.25rem; // 500px
