--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -227,7 +227,7 @@
                 },
                 onCreate: function (modal) {
                     OverlayScrollbars(document.querySelector('.modal-content'), {className: 'scrollbar'});
-                    getChart(chartId);
+                    getChart(chartId, 'edit');
                 }
             };
 
@@ -270,7 +270,9 @@
          */
         function openChartViewModal(chartId) {
             let chartOptions = {
-                classes: 'chart-edit-modal',
+                title: i18n.msg('chart.label.viewTitle'),
+                body: createModalContent('view'),
+                classes: 'chart-view-modal',
                 buttons: [{
                     content: i18n.msg('common.btn.cancel'),
                     classes: "default-line",
@@ -283,6 +285,7 @@
                     closable: false,
                 },
                 onCreate: function (modal) {
+                    getChart(chartId, 'view');
                 }
             };
 
@@ -290,11 +293,17 @@
             chartViewModal.show();
         }
 
-        function createModalContent() {
-            return `<div class="flex-column" id="getChart"><div>`
+        function createModalContent(type) {
+            if (type === 'edit') {
+                return `<div class="flex-column" id="getChart"></div>`
+            } else {
+                return '<div class="flex-column">' +
+                    '<div class="flex-column edit-row mt-2"><div id="container" style="width:100%; height:400px;"/>' +
+                    '</div></div>'
+            }
         }
 
-        function getChart(chartId) {
+        function getChart(chartId, target) {
             let strUrl = ''
             if (chartId === undefined) {
                 strUrl = '/charts/new';
@@ -308,8 +317,10 @@
                 contentType: 'application/json',
                 showProgressbar: false,
                 callbackFunc: function (response) {
-                    document.getElementById('getChart').innerHTML = response.responseText;
-                    setDisplay(document.getElementById('typeSelectBox').value);
+                    if (target === 'edit') {
+                        document.getElementById('getChart').innerHTML = response.responseText;
+                        setDisplay(document.getElementById('typeSelectBox').value);
+                    }
                     let data = parsedPropertyJson(document.getElementById('chartConfig').value, document.getElementById('propertyJson').value);
                     Highcharts.chart('container', {
                         chart: data.chart,
