#10087 동적 차트 데이터로 차트 그리기 Commit

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4726,7 +4726,10 @@ body.modal-active {
 }
 .modal-dialog.chart-view-modal {
   width: 62.5rem;
-  height: 31.25rem;
+  height: 53.0625rem;
+}
+.modal-dialog.chart-view-modal .modal-content {
+  padding: 0.625rem 1.25rem 2.5rem 1.25rem;
 }
 .modal-dialog.cmdb-ci-view-modal {
   width: 62.5rem;
