--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -150,7 +150,7 @@
         function openChartEditModal(chartId) {
             let chartOptions = {
                 title: i18n.msg('chart.label.edit'),
-                body: createModalContent('edit'),
+                body: createModalContent(),
                 classes: 'chart-edit-modal',
                 buttons: [
                     // 미리보기
@@ -210,7 +210,7 @@
         function openChartViewModal(chartId) {
             let chartOptions = {
                 title: i18n.msg('chart.label.viewTitle'),
-                body: createModalContent('view'),
+                body: createModalContent(),
                 classes: 'chart-view-modal',
                 buttons: [{
                     content: i18n.msg('common.btn.cancel'),
@@ -232,22 +232,18 @@
             chartViewModal.show();
         }
 
-        function createModalContent(type) {
-            if (type === 'edit') {
-                return `<div class="flex-column" id="getChart"></div>`
-            } else {
-                return '<div class="flex-column">' +
-                    '<div class="flex-column edit-row mt-2"><div id="container" style="width:100%; height:400px;"/>' +
-                    '</div></div>'
-            }
+        function createModalContent() {
+            return `<div class="flex-column" id="getChart"></div>`
         }
 
         function getChart(chartId, target) {
             let strUrl = ''
             if (chartId === undefined) {
                 strUrl = '/charts/new';
-            } else {
+            } else if (target === 'edit') {
                 strUrl = '/charts/' + chartId + '/edit';
+            } else {
+                strUrl = '/charts/' + chartId + '/view';
             }
 
             const opt = {
@@ -256,19 +252,22 @@
                 contentType: 'application/json',
                 showProgressbar: false,
                 callbackFunc: function (response) {
-                    if (target === 'edit') {
+                    if (target === 'edit' || target === 'view') {
                         document.getElementById('getChart').innerHTML = response.responseText;
-                        setDisplay(document.getElementById('typeSelectBox').value);
+                        if (target === 'edit') {
+                            setDisplay(document.getElementById('typeSelectBox').value);
+                        }
+                        let data = parsedPropertyJson(document.getElementById('chartConfig').value, document.getElementById('propertyJson').value);
+                        Highcharts.chart('container', {
+                            chart: data.chart,
+                            title: data.title,
+                            yAxis: data.yAxis,
+                            xAxis: data.xAxis,
+                            tooltip: data.tooltip,
+                            plotOptions: data.plotOptions,
+                            series: data.series
+                        });
                     }
-                    let data = parsedPropertyJson(document.getElementById('chartConfig').value, document.getElementById('propertyJson').value);
-                    Highcharts.chart('container', {
-                        chart: data.chart,
-                        title: data.title,
-                        tooltip: data.tooltip,
-                        accessibility: data.accessibility,
-                        plotOptions: data.plotOptions,
-                        series: data.series
-                    });
                 }
             };
             aliceJs.sendXhr(opt);
@@ -438,67 +437,217 @@
             }
 
             // chart
-            let chartProperty = new Object();
-            chartProperty.type = chartConfigJson.type.substring(6, chartConfigJson.type.length);
-            chartProperty.plotBackgroundColor = null;
-            chartProperty.plotBorderWidth = null;
-            chartProperty.plotShadow = false;
-            jsonObject.chart = chartProperty;
+            if (chartConfigJson.type === 'chart.pie') {
+                let chartProperty = new Object();
+                chartProperty.type = 'pie';
+                chartProperty.plotBackgroundColor = null;
+                chartProperty.plotBorderWidth = null;
+                chartProperty.plotShadow = false;
+                jsonObject.chart = chartProperty;
+            } else if (chartConfigJson.type === 'chart.stackedColumn') {
+                let chartProperty = new Object();
+                chartProperty.type = 'column';
+                jsonObject.chart = chartProperty;
+            }
 
             // title
             let titleProperty = new Object;
             titleProperty.text = propertyJson[0].title;
             jsonObject.title = titleProperty;
 
+            // subTitle
+            if (chartConfigJson.type === 'chart.basicLine') {
+                let subTitleProperty = new Object;
+                subTitleProperty.text = '통계 차트 보고서';
+                jsonObject.subtitle = subTitleProperty;
+            }
+
+            // xAxis
+            if (chartConfigJson.type === 'chart.stackedColumn') {
+                let xAxisProperty = new Object;
+                let xAxisArray = new Array;
+                xAxisArray = docKeyList;
+                xAxisProperty.categories = xAxisArray;
+                jsonObject.xAxis = xAxisProperty;
+            } else if (chartConfigJson.type === 'chart.basicLine') {
+                let xAxisProperty = new Object;
+                xAxisProperty.type = 'datetime';
+                jsonObject.xAxis = xAxisProperty;
+            }
+
+            // yAxis
+            if (chartConfigJson.type === 'chart.stackedColumn') {
+                let yAxisProperty = new Object;
+                let yAxisTitleProperty = new Object;
+                let stackedLabelsProperty = new Object;
+                let styleProperty = new Object;
+                yAxisProperty.min = 0;
+                yAxisTitleProperty.text = 'Number of Document';
+                yAxisProperty.title = yAxisTitleProperty;
+                stackedLabelsProperty.enabled = true;
+                styleProperty.fontWeight = 'bold';
+                styleProperty.color = 'gray';
+                stackedLabelsProperty.style = styleProperty;
+                yAxisProperty.stackedLabels = stackedLabelsProperty;
+                jsonObject.yAxis = yAxisProperty;
+            } else if (chartConfigJson.type === 'chart.basicLine') {
+                let yAxisProperty = new Object;
+                let yAxisTitleProperty = new Object;
+                yAxisTitleProperty.text = 'Number of Documents';
+                yAxisProperty.title = yAxisTitleProperty;
+                jsonObject.yAxis = yAxisProperty;
+            }
+
+            if (chartConfigJson.type === 'chart.stackedColumn') {
+                let legendProperty = new Object;
+                legendProperty.align = 'right';
+                legendProperty.x = -30;
+                legendProperty.verticalAlign = 'top';
+                legendProperty.y = 25;
+                legendProperty.floating = true;
+                legendProperty.backgroundColor = 'white';
+                legendProperty.borderColor = '#CCC';
+                legendProperty.borderWidth = 1;
+                legendProperty.shadow = false;
+                jsonObject.legend = legendProperty;
+            } else if (chartConfigJson.type === 'chart.basicLine') {
+                let legendProperty = new Object;
+                legendProperty.layout = 'vertical';
+                legendProperty.align = 'right';
+                legendProperty.verticalAlign = 'middle';
+                jsonObject.legend = legendProperty;
+            }
+
             // tooltip
             let tooltipProperty = new Object;
-            if (chartConfigJson.operation === 'percent') {
-                tooltipProperty.pointFormat = '문서 차지 비율: <b>{point.percentage:.1f} %</b>';
-            } else {
-                tooltipProperty.pointFormat = '문서 건 수: <b>{point.y:.f} 건</b>';
+            if (chartConfigJson.type === 'chart.pie') {
+                if (chartConfigJson.operation === 'percent') {
+                    tooltipProperty.pointFormat = '문서 차지 비율: <b>{point.percentage:.1f} %</b>';
+                } else {
+                    tooltipProperty.pointFormat = '문서 건 수: <b>{point.y:.f} 건</b>';
+                }
+                jsonObject.tooltip = tooltipProperty;
+            } else if (chartConfigJson.type === 'chart.stackedColumn') {
+                tooltipProperty.headerFormat = '<b>{point.x}</b><br/>';
+                if (chartConfigJson.operation === 'percent') {
+                    tooltipProperty.pointFormatter = function () {
+                        let sum = countArray.reduce((a,b) => (a+b));
+                        let percent = (this.y / sum) * 100;
+                        return '문서 건 수: ' + '<b>' + Highcharts.numberFormat(percent) + '</b>' + '%';
+                    }
+                } else {
+                    tooltipProperty.pointFormat = '문서 건 수: <b>{point.y:.f} 건</b>';
+                }
+                jsonObject.tooltip = tooltipProperty;
             }
-            jsonObject.tooltip = tooltipProperty;
 
             // accessibility
-            let accessibilityProperty = new Object;
-            let pointProperty = new Object;
-            pointProperty.valueSuffix = '%';
-            accessibilityProperty.point = pointProperty
-            jsonObject.accessibility = accessibilityProperty;
+            if (chartConfigJson.type === 'chart.pie') {
+                let accessibilityProperty = new Object;
+                let pointProperty = new Object;
+                pointProperty.valueSuffix = '%';
+                accessibilityProperty.point = pointProperty
+                jsonObject.accessibility = accessibilityProperty;
+            }
 
             // plotOptions
             let plotOptionsProperty = new Object;
-            let pieProperty = new Object;
-            let dataLabelsProperty = new Object;
-            pieProperty.allowPoinSelect = true;
-            pieProperty.cursor = 'pointer';
-            dataLabelsProperty.enabled = true;
-            if (chartConfigJson.operation === 'percent') {
-                dataLabelsProperty.format = '<b>{point.name}</b>: {point.percentage:.1f} %';
+            if (chartConfigJson.type === 'chart.pie') {
+                let pieProperty = new Object;
+                let dataLabelsProperty = new Object;
+                pieProperty.allowPoinSelect = true;
+                pieProperty.cursor = 'pointer';
+                dataLabelsProperty.enabled = true;
+                if (chartConfigJson.operation === 'percent') {
+                    dataLabelsProperty.format = '<b>{point.name}</b>: {point.percentage:.1f} %';
+                } else {
+                    dataLabelsProperty.format = '<b>{point.name}</b>: {y:.f} 건';
+                }
+                pieProperty.dataLabels = dataLabelsProperty;
+                plotOptionsProperty.pie = pieProperty;
+            } else if (chartConfigJson.type === 'chart.stackedColumn') {
+                let columnProperty = new Object;
+                let dataLabelsProperty = new Object;
+                columnProperty.stacking = 'normal';
+                dataLabelsProperty.enabled = true;
+                if (chartConfigJson.operation === 'percent') {
+                    dataLabelsProperty.formatter = function () {
+                        let sum = countArray.reduce((a,b) => (a+b));
+                        let percent = (this.y / sum) * 100;
+                        return Highcharts.numberFormat(percent) + '%';
+                    }
+                }
+                columnProperty.dataLabels = dataLabelsProperty;
+                plotOptionsProperty.column = columnProperty;
             } else {
-                dataLabelsProperty.format = '<b>{point.name}</b>: {y:.f} 건';
+                const getYear = docKeyList[0].substring(0, 4);
+                const getMonth = docKeyList[0].substring(4, 6);
+                const getDay = docKeyList[0].substring(6, 8);
+                const getHour = docKeyList[0].substring(8, 10);
+                let seriesProperty = new Object;
+                seriesProperty.pointStart = Date.UTC(getYear, getMonth, getDay, getHour);
+                if (chartConfigJson.periodUnit === CHART_YEAR) {
+                    seriesProperty.pointIntervalUnit = 'year';
+                } else if (chartConfigJson.periodUnit === CHART_MONTH) {
+                    seriesProperty.pointIntervalUnit = 'month';
+                } else if (chartConfigJson.periodUnit === CHART_DAY) {
+                    seriesProperty.pointIntervalUnit = 'day';
+                } else {
+                }
+                plotOptionsProperty.series = seriesProperty;
             }
-            pieProperty.dataLabels = dataLabelsProperty;
-            plotOptionsProperty.pie = pieProperty;
             jsonObject.plotOptions = plotOptionsProperty;
 
             // series
             let seriesArray = new Array;
             let seriesObject = new Object;
             let seriesDataArray = new Array;
-            seriesObject.colorByPoint = true;
 
-            for (let i = 0; i < Object.keys(propertyJson[1].documentList).length; i++) {
-                let seriesDataObject = new Object;
-                seriesDataObject.name = docKeyList[i];
-                seriesDataObject.y = countArray[i];
-                seriesDataObject.sliced = true;
-                seriesDataObject.selected = true;
-                seriesDataArray.push(seriesDataObject);
+            if (chartConfigJson.type === 'chart.pie') {
+                seriesObject.colorByPoint = true;
+                for (let i = 0; i < Object.keys(propertyJson[1].documentList).length; i++) {
+                    let seriesDataObject = new Object;
+                    seriesDataObject.name = docKeyList[i];
+                    seriesDataObject.y = countArray[i];
+                    seriesDataObject.sliced = true;
+                    seriesDataObject.selected = true;
+                    seriesDataArray.push(seriesDataObject);
+                    seriesObject.data = seriesDataArray;
+                }
+            } else if (chartConfigJson.type === 'chart.stackedColumn') {
+                seriesObject.name = 'Document'
+                for (let i = 0; i < Object.keys(propertyJson[1].documentList).length; i++) {
+                    seriesDataArray.push(countArray[i]);
+                }
+                seriesObject.data = seriesDataArray;
+            } else if (chartConfigJson.type === 'chart.basicLine') {
+                seriesObject.name = 'Document';
+                for (let i = 0; i < Object.keys(propertyJson[1].documentList).length; i++) {
+                    seriesDataArray.push(countArray[i]);
+                }
+                seriesObject.data = seriesDataArray;
             }
-            seriesObject.data = seriesDataArray;
             seriesArray.push(seriesObject);
             jsonObject.series = seriesArray;
+
+            if (chartConfigJson.type === 'chart.basicLine') {
+                let responsiveProperty = new Object;
+                let rulesArray = new Array;
+                let rulesProperty = new Object;
+                let conditionProperty = new Object;
+                let chartOptionsProperty = new Object;
+                let legendProperty = new Object;
+                legendProperty.layout = 'horizontal';
+                legendProperty.align = 'center';
+                legendProperty.verticalAlign = 'bottom';
+                chartOptionsProperty.legend = legendProperty;
+                conditionProperty.maxWidth = 500;
+                rulesProperty.condition = conditionProperty;
+                rulesProperty.chartOptions = chartOptionsProperty;
+                rulesArray.push(rulesProperty);
+                responsiveProperty.rules = rulesArray;
+                jsonObject.responsive = responsiveProperty;
+            }
 
             console.log(jsonObject);
             return jsonObject;
